asg5-submit/yyparse.output
Terminals unused in grammar

   ROOT
   IDENT
   NUMBER
   TYPE_ID
   FUNCTION
   TOK_PARAM
   TOK_PROTOTYPE
   BLOCK
   TOK_INDEX
   CALL
   ENDIF
   TOK_IFELSE
   '^'


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program struct
    3        | program vardecl
    4        | program function
    5        | program error ';'
    6        | program error '}'
    7        | program ';'
    8        | %empty

    9 struct: TOK_STRUCT TOK_IDENT blockS

   10 function: identif '(' ')' ';'
   11         | identif param ')' ';'
   12         | identif '(' ')' block
   13         | identif param ')' block

   14 vardecl: type TOK_IDENT ';'
   15        | type TOK_IDENT '=' express ';'

   16 identif: type TOK_IDENT

   17 param: '(' identif
   18      | param ',' identif

   19 callParam: TOK_IDENT '(' express
   20          | callParam ',' express

   21 call: TOK_IDENT '(' ')'
   22     | callParam ')'

   23 while: TOK_WHILE '(' express ')' select

   24 select: state

   25 ifelse: TOK_IF '(' express ')' select
   26       | TOK_IF '(' express ')' select TOK_ELSE select

   27 return: TOK_RETURN ';'
   28       | TOK_RETURN express ';'

   29 alloc: TOK_ALLOC TOK_LT TOK_STRING TOK_GT '(' ')'
   30      | TOK_ALLOC TOK_LT TOK_STRING TOK_GT '(' express ')'
   31      | TOK_ALLOC TOK_LT TOK_STRUCT TOK_IDENT TOK_GT '(' express ')'
   32      | TOK_ALLOC TOK_LT TOK_STRUCT TOK_IDENT TOK_GT '(' ')'
   33      | TOK_ALLOC TOK_LT TOK_ARRAY TOK_LT type TOK_GT TOK_GT '(' ')'
   34      | TOK_ALLOC TOK_LT TOK_ARRAY TOK_LT type TOK_GT TOK_GT '(' express ')'

   35 blockS: blockBodyS '}' ';'

   36 blockBodyS: multiState
   37           | '{'

   38 block: blockBody '}'

   39 blockBody: multiState
   40          | '{'

   41 multiState: '{' state
   42           | multiState state

   43 state: vardecl
   44      | block
   45      | while
   46      | ifelse
   47      | return
   48      | express ';'
   49      | ';'

   50 express: binop
   51        | unop
   52        | alloc
   53        | call
   54        | '(' express ')'
   55        | var
   56        | constant

   57 binop: express '=' express
   58      | express TOK_EQ express
   59      | express TOK_NE express
   60      | express TOK_GT express
   61      | express TOK_GE express
   62      | express TOK_LT express
   63      | express TOK_LE express
   64      | express '+' express
   65      | express '-' express
   66      | express '*' express
   67      | express '/' express
   68      | express '%' express

   69 unop: '+' express
   70     | '-' express
   71     | TOK_NOT express

   72 var: TOK_IDENT
   73    | express '[' express ']'
   74    | express TOK_ARROW TOK_IDENT

   75 type: type_id
   76     | TOK_ARRAY TOK_LT type_id TOK_GT

   77 type_id: TOK_INT
   78        | TOK_STRING
   79        | TOK_CHAR
   80        | TOK_VOID
   81        | TOK_PTR TOK_LT TOK_STRUCT TOK_IDENT TOK_GT

   82 constant: TOK_INTCON
   83         | TOK_STRINGCON
   84         | TOK_CHARCON
   85         | TOK_NULLPTR


Terminals, with rules where they appear

$end (0) 0
'%' (37) 68
'(' (40) 10 12 17 19 21 23 25 26 29 30 31 32 33 34 54
')' (41) 10 11 12 13 21 22 23 25 26 29 30 31 32 33 34 54
'*' (42) 66
'+' (43) 64 69
',' (44) 18 20
'-' (45) 65 70
'/' (47) 67
';' (59) 5 7 10 11 14 15 27 28 35 48 49
'=' (61) 15 57
'[' (91) 73
']' (93) 73
'^' (94)
'{' (123) 37 40 41
'}' (125) 6 35 38
error (256) 5 6
ROOT (258)
IDENT (259)
NUMBER (260)
TYPE_ID (261)
FUNCTION (262)
TOK_PARAM (263)
TOK_PROTOTYPE (264)
BLOCK (265)
TOK_NULLPTR (266) 85
TOK_INDEX (267)
CALL (268)
ENDIF (269)
TOK_IFELSE (270)
TOK_GE (271) 61
TOK_LE (272) 63
TOK_EQ (273) 58
TOK_NE (274) 59
TOK_GT (275) 29 30 31 32 33 34 60 76 81
TOK_LT (276) 29 30 31 32 33 34 62 76 81
TOK_IF (277) 25 26
TOK_ELSE (278) 26
TOK_STRUCT (279) 9 31 32 81
TOK_ARRAY (280) 33 34 76
TOK_NOT (281) 71
TOK_ALLOC (282) 29 30 31 32 33 34
TOK_PTR (283) 81
TOK_ARROW (284) 74
TOK_WHILE (285) 23
TOK_VOID (286) 80
TOK_RETURN (287) 27 28
TOK_INT (288) 77
TOK_CHAR (289) 79
TOK_STRING (290) 29 30 78
TOK_CHARCON (291) 84
TOK_STRINGCON (292) 83
TOK_INTCON (293) 82
TOK_IDENT (294) 9 14 15 16 19 21 31 32 72 74 81
POS (295)
NEG (296)


Nonterminals, with rules where they appear

$accept (57)
    on left: 0
start (58)
    on left: 1, on right: 0
program (59)
    on left: 2 3 4 5 6 7 8, on right: 1 2 3 4 5 6 7
struct (60)
    on left: 9, on right: 2
function (61)
    on left: 10 11 12 13, on right: 4
vardecl (62)
    on left: 14 15, on right: 3 43
identif (63)
    on left: 16, on right: 10 11 12 13 17 18
param (64)
    on left: 17 18, on right: 11 13 18
callParam (65)
    on left: 19 20, on right: 20 22
call (66)
    on left: 21 22, on right: 53
while (67)
    on left: 23, on right: 45
select (68)
    on left: 24, on right: 23 25 26
ifelse (69)
    on left: 25 26, on right: 46
return (70)
    on left: 27 28, on right: 47
alloc (71)
    on left: 29 30 31 32 33 34, on right: 52
blockS (72)
    on left: 35, on right: 9
blockBodyS (73)
    on left: 36 37, on right: 35
block (74)
    on left: 38, on right: 12 13 44
blockBody (75)
    on left: 39 40, on right: 38
multiState (76)
    on left: 41 42, on right: 36 39 42
state (77)
    on left: 43 44 45 46 47 48 49, on right: 24 41 42
express (78)
    on left: 50 51 52 53 54 55 56, on right: 15 19 20 23 25 26 28 30
    31 34 48 54 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 73 74
binop (79)
    on left: 57 58 59 60 61 62 63 64 65 66 67 68, on right: 50
unop (80)
    on left: 69 70 71, on right: 51
var (81)
    on left: 72 73 74, on right: 55
type (82)
    on left: 75 76, on right: 14 15 16 33 34
type_id (83)
    on left: 77 78 79 80 81, on right: 75 76
constant (84)
    on left: 82 83 84 85, on right: 56


State 0

    0 $accept: . start $end

    $default  reduce using rule 8 (program)

    start    go to state 1
    program  go to state 2


State 1

    0 $accept: start . $end

    $end  shift, and go to state 3


State 2

    1 start: program .
    2 program: program . struct
    3        | program . vardecl
    4        | program . function
    5        | program . error ';'
    6        | program . error '}'
    7        | program . ';'

    error       shift, and go to state 4
    TOK_STRUCT  shift, and go to state 5
    TOK_ARRAY   shift, and go to state 6
    TOK_PTR     shift, and go to state 7
    TOK_VOID    shift, and go to state 8
    TOK_INT     shift, and go to state 9
    TOK_CHAR    shift, and go to state 10
    TOK_STRING  shift, and go to state 11
    ';'         shift, and go to state 12

    $end  reduce using rule 1 (start)

    struct    go to state 13
    function  go to state 14
    vardecl   go to state 15
    identif   go to state 16
    type      go to state 17
    type_id   go to state 18


State 3

    0 $accept: start $end .

    $default  accept


State 4

    5 program: program error . ';'
    6        | program error . '}'

    ';'  shift, and go to state 19
    '}'  shift, and go to state 20


State 5

    9 struct: TOK_STRUCT . TOK_IDENT blockS

    TOK_IDENT  shift, and go to state 21


State 6

   76 type: TOK_ARRAY . TOK_LT type_id TOK_GT

    TOK_LT  shift, and go to state 22


State 7

   81 type_id: TOK_PTR . TOK_LT TOK_STRUCT TOK_IDENT TOK_GT

    TOK_LT  shift, and go to state 23


State 8

   80 type_id: TOK_VOID .

    $default  reduce using rule 80 (type_id)


State 9

   77 type_id: TOK_INT .

    $default  reduce using rule 77 (type_id)


State 10

   79 type_id: TOK_CHAR .

    $default  reduce using rule 79 (type_id)


State 11

   78 type_id: TOK_STRING .

    $default  reduce using rule 78 (type_id)


State 12

    7 program: program ';' .

    $default  reduce using rule 7 (program)


State 13

    2 program: program struct .

    $default  reduce using rule 2 (program)


State 14

    4 program: program function .

    $default  reduce using rule 4 (program)


State 15

    3 program: program vardecl .

    $default  reduce using rule 3 (program)


State 16

   10 function: identif . '(' ')' ';'
   11         | identif . param ')' ';'
   12         | identif . '(' ')' block
   13         | identif . param ')' block

    '('  shift, and go to state 24

    param  go to state 25


State 17

   14 vardecl: type . TOK_IDENT ';'
   15        | type . TOK_IDENT '=' express ';'
   16 identif: type . TOK_IDENT

    TOK_IDENT  shift, and go to state 26


State 18

   75 type: type_id .

    $default  reduce using rule 75 (type)


State 19

    5 program: program error ';' .

    $default  reduce using rule 5 (program)


State 20

    6 program: program error '}' .

    $default  reduce using rule 6 (program)


State 21

    9 struct: TOK_STRUCT TOK_IDENT . blockS

    '{'  shift, and go to state 27

    blockS      go to state 28
    blockBodyS  go to state 29
    multiState  go to state 30


State 22

   76 type: TOK_ARRAY TOK_LT . type_id TOK_GT

    TOK_PTR     shift, and go to state 7
    TOK_VOID    shift, and go to state 8
    TOK_INT     shift, and go to state 9
    TOK_CHAR    shift, and go to state 10
    TOK_STRING  shift, and go to state 11

    type_id  go to state 31


State 23

   81 type_id: TOK_PTR TOK_LT . TOK_STRUCT TOK_IDENT TOK_GT

    TOK_STRUCT  shift, and go to state 32


State 24

   10 function: identif '(' . ')' ';'
   12         | identif '(' . ')' block
   17 param: '(' . identif

    TOK_ARRAY   shift, and go to state 6
    TOK_PTR     shift, and go to state 7
    TOK_VOID    shift, and go to state 8
    TOK_INT     shift, and go to state 9
    TOK_CHAR    shift, and go to state 10
    TOK_STRING  shift, and go to state 11
    ')'         shift, and go to state 33

    identif  go to state 34
    type     go to state 35
    type_id  go to state 18


State 25

   11 function: identif param . ')' ';'
   13         | identif param . ')' block
   18 param: param . ',' identif

    ')'  shift, and go to state 36
    ','  shift, and go to state 37


State 26

   14 vardecl: type TOK_IDENT . ';'
   15        | type TOK_IDENT . '=' express ';'
   16 identif: type TOK_IDENT .

    '='  shift, and go to state 38
    ';'  shift, and go to state 39

    $default  reduce using rule 16 (identif)


State 27

   37 blockBodyS: '{' .
   41 multiState: '{' . state

    TOK_NULLPTR    shift, and go to state 40
    TOK_IF         shift, and go to state 41
    TOK_ARRAY      shift, and go to state 6
    TOK_NOT        shift, and go to state 42
    TOK_ALLOC      shift, and go to state 43
    TOK_PTR        shift, and go to state 7
    TOK_WHILE      shift, and go to state 44
    TOK_VOID       shift, and go to state 8
    TOK_RETURN     shift, and go to state 45
    TOK_INT        shift, and go to state 9
    TOK_CHAR       shift, and go to state 10
    TOK_STRING     shift, and go to state 11
    TOK_CHARCON    shift, and go to state 46
    TOK_STRINGCON  shift, and go to state 47
    TOK_INTCON     shift, and go to state 48
    TOK_IDENT      shift, and go to state 49
    '+'            shift, and go to state 50
    '-'            shift, and go to state 51
    '('            shift, and go to state 52
    ';'            shift, and go to state 53
    '{'            shift, and go to state 54

    $default  reduce using rule 37 (blockBodyS)

    vardecl     go to state 55
    callParam   go to state 56
    call        go to state 57
    while       go to state 58
    ifelse      go to state 59
    return      go to state 60
    alloc       go to state 61
    block       go to state 62
    blockBody   go to state 63
    multiState  go to state 64
    state       go to state 65
    express     go to state 66
    binop       go to state 67
    unop        go to state 68
    var         go to state 69
    type        go to state 70
    type_id     go to state 18
    constant    go to state 71


State 28

    9 struct: TOK_STRUCT TOK_IDENT blockS .

    $default  reduce using rule 9 (struct)


State 29

   35 blockS: blockBodyS . '}' ';'

    '}'  shift, and go to state 72


State 30

   36 blockBodyS: multiState .
   42 multiState: multiState . state

    TOK_NULLPTR    shift, and go to state 40
    TOK_IF         shift, and go to state 41
    TOK_ARRAY      shift, and go to state 6
    TOK_NOT        shift, and go to state 42
    TOK_ALLOC      shift, and go to state 43
    TOK_PTR        shift, and go to state 7
    TOK_WHILE      shift, and go to state 44
    TOK_VOID       shift, and go to state 8
    TOK_RETURN     shift, and go to state 45
    TOK_INT        shift, and go to state 9
    TOK_CHAR       shift, and go to state 10
    TOK_STRING     shift, and go to state 11
    TOK_CHARCON    shift, and go to state 46
    TOK_STRINGCON  shift, and go to state 47
    TOK_INTCON     shift, and go to state 48
    TOK_IDENT      shift, and go to state 49
    '+'            shift, and go to state 50
    '-'            shift, and go to state 51
    '('            shift, and go to state 52
    ';'            shift, and go to state 53
    '{'            shift, and go to state 54

    $default  reduce using rule 36 (blockBodyS)

    vardecl     go to state 55
    callParam   go to state 56
    call        go to state 57
    while       go to state 58
    ifelse      go to state 59
    return      go to state 60
    alloc       go to state 61
    block       go to state 62
    blockBody   go to state 63
    multiState  go to state 64
    state       go to state 73
    express     go to state 66
    binop       go to state 67
    unop        go to state 68
    var         go to state 69
    type        go to state 70
    type_id     go to state 18
    constant    go to state 71


State 31

   76 type: TOK_ARRAY TOK_LT type_id . TOK_GT

    TOK_GT  shift, and go to state 74


State 32

   81 type_id: TOK_PTR TOK_LT TOK_STRUCT . TOK_IDENT TOK_GT

    TOK_IDENT  shift, and go to state 75


State 33

   10 function: identif '(' ')' . ';'
   12         | identif '(' ')' . block

    ';'  shift, and go to state 76
    '{'  shift, and go to state 54

    block       go to state 77
    blockBody   go to state 63
    multiState  go to state 64


State 34

   17 param: '(' identif .

    $default  reduce using rule 17 (param)


State 35

   16 identif: type . TOK_IDENT

    TOK_IDENT  shift, and go to state 78


State 36

   11 function: identif param ')' . ';'
   13         | identif param ')' . block

    ';'  shift, and go to state 79
    '{'  shift, and go to state 54

    block       go to state 80
    blockBody   go to state 63
    multiState  go to state 64


State 37

   18 param: param ',' . identif

    TOK_ARRAY   shift, and go to state 6
    TOK_PTR     shift, and go to state 7
    TOK_VOID    shift, and go to state 8
    TOK_INT     shift, and go to state 9
    TOK_CHAR    shift, and go to state 10
    TOK_STRING  shift, and go to state 11

    identif  go to state 81
    type     go to state 35
    type_id  go to state 18


State 38

   15 vardecl: type TOK_IDENT '=' . express ';'

    TOK_NULLPTR    shift, and go to state 40
    TOK_NOT        shift, and go to state 42
    TOK_ALLOC      shift, and go to state 43
    TOK_CHARCON    shift, and go to state 46
    TOK_STRINGCON  shift, and go to state 47
    TOK_INTCON     shift, and go to state 48
    TOK_IDENT      shift, and go to state 49
    '+'            shift, and go to state 50
    '-'            shift, and go to state 51
    '('            shift, and go to state 52

    callParam  go to state 56
    call       go to state 57
    alloc      go to state 61
    express    go to state 82
    binop      go to state 67
    unop       go to state 68
    var        go to state 69
    constant   go to state 71


State 39

   14 vardecl: type TOK_IDENT ';' .

    $default  reduce using rule 14 (vardecl)


State 40

   85 constant: TOK_NULLPTR .

    $default  reduce using rule 85 (constant)


State 41

   25 ifelse: TOK_IF . '(' express ')' select
   26       | TOK_IF . '(' express ')' select TOK_ELSE select

    '('  shift, and go to state 83


State 42

   71 unop: TOK_NOT . express

    TOK_NULLPTR    shift, and go to state 40
    TOK_NOT        shift, and go to state 42
    TOK_ALLOC      shift, and go to state 43
    TOK_CHARCON    shift, and go to state 46
    TOK_STRINGCON  shift, and go to state 47
    TOK_INTCON     shift, and go to state 48
    TOK_IDENT      shift, and go to state 49
    '+'            shift, and go to state 50
    '-'            shift, and go to state 51
    '('            shift, and go to state 52

    callParam  go to state 56
    call       go to state 57
    alloc      go to state 61
    express    go to state 84
    binop      go to state 67
    unop       go to state 68
    var        go to state 69
    constant   go to state 71


State 43

   29 alloc: TOK_ALLOC . TOK_LT TOK_STRING TOK_GT '(' ')'
   30      | TOK_ALLOC . TOK_LT TOK_STRING TOK_GT '(' express ')'
   31      | TOK_ALLOC . TOK_LT TOK_STRUCT TOK_IDENT TOK_GT '(' express ')'
   32      | TOK_ALLOC . TOK_LT TOK_STRUCT TOK_IDENT TOK_GT '(' ')'
   33      | TOK_ALLOC . TOK_LT TOK_ARRAY TOK_LT type TOK_GT TOK_GT '(' ')'
   34      | TOK_ALLOC . TOK_LT TOK_ARRAY TOK_LT type TOK_GT TOK_GT '(' express ')'

    TOK_LT  shift, and go to state 85


State 44

   23 while: TOK_WHILE . '(' express ')' select

    '('  shift, and go to state 86


State 45

   27 return: TOK_RETURN . ';'
   28       | TOK_RETURN . express ';'

    TOK_NULLPTR    shift, and go to state 40
    TOK_NOT        shift, and go to state 42
    TOK_ALLOC      shift, and go to state 43
    TOK_CHARCON    shift, and go to state 46
    TOK_STRINGCON  shift, and go to state 47
    TOK_INTCON     shift, and go to state 48
    TOK_IDENT      shift, and go to state 49
    '+'            shift, and go to state 50
    '-'            shift, and go to state 51
    '('            shift, and go to state 52
    ';'            shift, and go to state 87

    callParam  go to state 56
    call       go to state 57
    alloc      go to state 61
    express    go to state 88
    binop      go to state 67
    unop       go to state 68
    var        go to state 69
    constant   go to state 71


State 46

   84 constant: TOK_CHARCON .

    $default  reduce using rule 84 (constant)


State 47

   83 constant: TOK_STRINGCON .

    $default  reduce using rule 83 (constant)


State 48

   82 constant: TOK_INTCON .

    $default  reduce using rule 82 (constant)


State 49

   19 callParam: TOK_IDENT . '(' express
   21 call: TOK_IDENT . '(' ')'
   72 var: TOK_IDENT .

    '('  shift, and go to state 89

    $default  reduce using rule 72 (var)


State 50

   69 unop: '+' . express

    TOK_NULLPTR    shift, and go to state 40
    TOK_NOT        shift, and go to state 42
    TOK_ALLOC      shift, and go to state 43
    TOK_CHARCON    shift, and go to state 46
    TOK_STRINGCON  shift, and go to state 47
    TOK_INTCON     shift, and go to state 48
    TOK_IDENT      shift, and go to state 49
    '+'            shift, and go to state 50
    '-'            shift, and go to state 51
    '('            shift, and go to state 52

    callParam  go to state 56
    call       go to state 57
    alloc      go to state 61
    express    go to state 90
    binop      go to state 67
    unop       go to state 68
    var        go to state 69
    constant   go to state 71


State 51

   70 unop: '-' . express

    TOK_NULLPTR    shift, and go to state 40
    TOK_NOT        shift, and go to state 42
    TOK_ALLOC      shift, and go to state 43
    TOK_CHARCON    shift, and go to state 46
    TOK_STRINGCON  shift, and go to state 47
    TOK_INTCON     shift, and go to state 48
    TOK_IDENT      shift, and go to state 49
    '+'            shift, and go to state 50
    '-'            shift, and go to state 51
    '('            shift, and go to state 52

    callParam  go to state 56
    call       go to state 57
    alloc      go to state 61
    express    go to state 91
    binop      go to state 67
    unop       go to state 68
    var        go to state 69
    constant   go to state 71


State 52

   54 express: '(' . express ')'

    TOK_NULLPTR    shift, and go to state 40
    TOK_NOT        shift, and go to state 42
    TOK_ALLOC      shift, and go to state 43
    TOK_CHARCON    shift, and go to state 46
    TOK_STRINGCON  shift, and go to state 47
    TOK_INTCON     shift, and go to state 48
    TOK_IDENT      shift, and go to state 49
    '+'            shift, and go to state 50
    '-'            shift, and go to state 51
    '('            shift, and go to state 52

    callParam  go to state 56
    call       go to state 57
    alloc      go to state 61
    express    go to state 92
    binop      go to state 67
    unop       go to state 68
    var        go to state 69
    constant   go to state 71


State 53

   49 state: ';' .

    $default  reduce using rule 49 (state)


State 54

   40 blockBody: '{' .
   41 multiState: '{' . state

    TOK_NULLPTR    shift, and go to state 40
    TOK_IF         shift, and go to state 41
    TOK_ARRAY      shift, and go to state 6
    TOK_NOT        shift, and go to state 42
    TOK_ALLOC      shift, and go to state 43
    TOK_PTR        shift, and go to state 7
    TOK_WHILE      shift, and go to state 44
    TOK_VOID       shift, and go to state 8
    TOK_RETURN     shift, and go to state 45
    TOK_INT        shift, and go to state 9
    TOK_CHAR       shift, and go to state 10
    TOK_STRING     shift, and go to state 11
    TOK_CHARCON    shift, and go to state 46
    TOK_STRINGCON  shift, and go to state 47
    TOK_INTCON     shift, and go to state 48
    TOK_IDENT      shift, and go to state 49
    '+'            shift, and go to state 50
    '-'            shift, and go to state 51
    '('            shift, and go to state 52
    ';'            shift, and go to state 53
    '{'            shift, and go to state 54

    $default  reduce using rule 40 (blockBody)

    vardecl     go to state 55
    callParam   go to state 56
    call        go to state 57
    while       go to state 58
    ifelse      go to state 59
    return      go to state 60
    alloc       go to state 61
    block       go to state 62
    blockBody   go to state 63
    multiState  go to state 64
    state       go to state 65
    express     go to state 66
    binop       go to state 67
    unop        go to state 68
    var         go to state 69
    type        go to state 70
    type_id     go to state 18
    constant    go to state 71


State 55

   43 state: vardecl .

    $default  reduce using rule 43 (state)


State 56

   20 callParam: callParam . ',' express
   22 call: callParam . ')'

    ')'  shift, and go to state 93
    ','  shift, and go to state 94


State 57

   53 express: call .

    $default  reduce using rule 53 (express)


State 58

   45 state: while .

    $default  reduce using rule 45 (state)


State 59

   46 state: ifelse .

    $default  reduce using rule 46 (state)


State 60

   47 state: return .

    $default  reduce using rule 47 (state)


State 61

   52 express: alloc .

    $default  reduce using rule 52 (express)


State 62

   44 state: block .

    $default  reduce using rule 44 (state)


State 63

   38 block: blockBody . '}'

    '}'  shift, and go to state 95


State 64

   39 blockBody: multiState .
   42 multiState: multiState . state

    TOK_NULLPTR    shift, and go to state 40
    TOK_IF         shift, and go to state 41
    TOK_ARRAY      shift, and go to state 6
    TOK_NOT        shift, and go to state 42
    TOK_ALLOC      shift, and go to state 43
    TOK_PTR        shift, and go to state 7
    TOK_WHILE      shift, and go to state 44
    TOK_VOID       shift, and go to state 8
    TOK_RETURN     shift, and go to state 45
    TOK_INT        shift, and go to state 9
    TOK_CHAR       shift, and go to state 10
    TOK_STRING     shift, and go to state 11
    TOK_CHARCON    shift, and go to state 46
    TOK_STRINGCON  shift, and go to state 47
    TOK_INTCON     shift, and go to state 48
    TOK_IDENT      shift, and go to state 49
    '+'            shift, and go to state 50
    '-'            shift, and go to state 51
    '('            shift, and go to state 52
    ';'            shift, and go to state 53
    '{'            shift, and go to state 54

    $default  reduce using rule 39 (blockBody)

    vardecl     go to state 55
    callParam   go to state 56
    call        go to state 57
    while       go to state 58
    ifelse      go to state 59
    return      go to state 60
    alloc       go to state 61
    block       go to state 62
    blockBody   go to state 63
    multiState  go to state 64
    state       go to state 73
    express     go to state 66
    binop       go to state 67
    unop        go to state 68
    var         go to state 69
    type        go to state 70
    type_id     go to state 18
    constant    go to state 71


State 65

   41 multiState: '{' state .

    $default  reduce using rule 41 (multiState)


State 66

   48 state: express . ';'
   57 binop: express . '=' express
   58      | express . TOK_EQ express
   59      | express . TOK_NE express
   60      | express . TOK_GT express
   61      | express . TOK_GE express
   62      | express . TOK_LT express
   63      | express . TOK_LE express
   64      | express . '+' express
   65      | express . '-' express
   66      | express . '*' express
   67      | express . '/' express
   68      | express . '%' express
   73 var: express . '[' express ']'
   74    | express . TOK_ARROW TOK_IDENT

    TOK_GE     shift, and go to state 96
    TOK_LE     shift, and go to state 97
    TOK_EQ     shift, and go to state 98
    TOK_NE     shift, and go to state 99
    TOK_GT     shift, and go to state 100
    TOK_LT     shift, and go to state 101
    TOK_ARROW  shift, and go to state 102
    '='        shift, and go to state 103
    '+'        shift, and go to state 104
    '-'        shift, and go to state 105
    '*'        shift, and go to state 106
    '/'        shift, and go to state 107
    '%'        shift, and go to state 108
    '['        shift, and go to state 109
    ';'        shift, and go to state 110


State 67

   50 express: binop .

    $default  reduce using rule 50 (express)


State 68

   51 express: unop .

    $default  reduce using rule 51 (express)


State 69

   55 express: var .

    $default  reduce using rule 55 (express)


State 70

   14 vardecl: type . TOK_IDENT ';'
   15        | type . TOK_IDENT '=' express ';'

    TOK_IDENT  shift, and go to state 111


State 71

   56 express: constant .

    $default  reduce using rule 56 (express)


State 72

   35 blockS: blockBodyS '}' . ';'

    ';'  shift, and go to state 112


State 73

   42 multiState: multiState state .

    $default  reduce using rule 42 (multiState)


State 74

   76 type: TOK_ARRAY TOK_LT type_id TOK_GT .

    $default  reduce using rule 76 (type)


State 75

   81 type_id: TOK_PTR TOK_LT TOK_STRUCT TOK_IDENT . TOK_GT

    TOK_GT  shift, and go to state 113


State 76

   10 function: identif '(' ')' ';' .

    $default  reduce using rule 10 (function)


State 77

   12 function: identif '(' ')' block .

    $default  reduce using rule 12 (function)


State 78

   16 identif: type TOK_IDENT .

    $default  reduce using rule 16 (identif)


State 79

   11 function: identif param ')' ';' .

    $default  reduce using rule 11 (function)


State 80

   13 function: identif param ')' block .

    $default  reduce using rule 13 (function)


State 81

   18 param: param ',' identif .

    $default  reduce using rule 18 (param)


State 82

   15 vardecl: type TOK_IDENT '=' express . ';'
   57 binop: express . '=' express
   58      | express . TOK_EQ express
   59      | express . TOK_NE express
   60      | express . TOK_GT express
   61      | express . TOK_GE express
   62      | express . TOK_LT express
   63      | express . TOK_LE express
   64      | express . '+' express
   65      | express . '-' express
   66      | express . '*' express
   67      | express . '/' express
   68      | express . '%' express
   73 var: express . '[' express ']'
   74    | express . TOK_ARROW TOK_IDENT

    TOK_GE     shift, and go to state 96
    TOK_LE     shift, and go to state 97
    TOK_EQ     shift, and go to state 98
    TOK_NE     shift, and go to state 99
    TOK_GT     shift, and go to state 100
    TOK_LT     shift, and go to state 101
    TOK_ARROW  shift, and go to state 102
    '='        shift, and go to state 103
    '+'        shift, and go to state 104
    '-'        shift, and go to state 105
    '*'        shift, and go to state 106
    '/'        shift, and go to state 107
    '%'        shift, and go to state 108
    '['        shift, and go to state 109
    ';'        shift, and go to state 114


State 83

   25 ifelse: TOK_IF '(' . express ')' select
   26       | TOK_IF '(' . express ')' select TOK_ELSE select

    TOK_NULLPTR    shift, and go to state 40
    TOK_NOT        shift, and go to state 42
    TOK_ALLOC      shift, and go to state 43
    TOK_CHARCON    shift, and go to state 46
    TOK_STRINGCON  shift, and go to state 47
    TOK_INTCON     shift, and go to state 48
    TOK_IDENT      shift, and go to state 49
    '+'            shift, and go to state 50
    '-'            shift, and go to state 51
    '('            shift, and go to state 52

    callParam  go to state 56
    call       go to state 57
    alloc      go to state 61
    express    go to state 115
    binop      go to state 67
    unop       go to state 68
    var        go to state 69
    constant   go to state 71


State 84

   57 binop: express . '=' express
   58      | express . TOK_EQ express
   59      | express . TOK_NE express
   60      | express . TOK_GT express
   61      | express . TOK_GE express
   62      | express . TOK_LT express
   63      | express . TOK_LE express
   64      | express . '+' express
   65      | express . '-' express
   66      | express . '*' express
   67      | express . '/' express
   68      | express . '%' express
   71 unop: TOK_NOT express .
   73 var: express . '[' express ']'
   74    | express . TOK_ARROW TOK_IDENT

    TOK_ARROW  shift, and go to state 102
    '['        shift, and go to state 109

    $default  reduce using rule 71 (unop)


State 85

   29 alloc: TOK_ALLOC TOK_LT . TOK_STRING TOK_GT '(' ')'
   30      | TOK_ALLOC TOK_LT . TOK_STRING TOK_GT '(' express ')'
   31      | TOK_ALLOC TOK_LT . TOK_STRUCT TOK_IDENT TOK_GT '(' express ')'
   32      | TOK_ALLOC TOK_LT . TOK_STRUCT TOK_IDENT TOK_GT '(' ')'
   33      | TOK_ALLOC TOK_LT . TOK_ARRAY TOK_LT type TOK_GT TOK_GT '(' ')'
   34      | TOK_ALLOC TOK_LT . TOK_ARRAY TOK_LT type TOK_GT TOK_GT '(' express ')'

    TOK_STRUCT  shift, and go to state 116
    TOK_ARRAY   shift, and go to state 117
    TOK_STRING  shift, and go to state 118


State 86

   23 while: TOK_WHILE '(' . express ')' select

    TOK_NULLPTR    shift, and go to state 40
    TOK_NOT        shift, and go to state 42
    TOK_ALLOC      shift, and go to state 43
    TOK_CHARCON    shift, and go to state 46
    TOK_STRINGCON  shift, and go to state 47
    TOK_INTCON     shift, and go to state 48
    TOK_IDENT      shift, and go to state 49
    '+'            shift, and go to state 50
    '-'            shift, and go to state 51
    '('            shift, and go to state 52

    callParam  go to state 56
    call       go to state 57
    alloc      go to state 61
    express    go to state 119
    binop      go to state 67
    unop       go to state 68
    var        go to state 69
    constant   go to state 71


State 87

   27 return: TOK_RETURN ';' .

    $default  reduce using rule 27 (return)


State 88

   28 return: TOK_RETURN express . ';'
   57 binop: express . '=' express
   58      | express . TOK_EQ express
   59      | express . TOK_NE express
   60      | express . TOK_GT express
   61      | express . TOK_GE express
   62      | express . TOK_LT express
   63      | express . TOK_LE express
   64      | express . '+' express
   65      | express . '-' express
   66      | express . '*' express
   67      | express . '/' express
   68      | express . '%' express
   73 var: express . '[' express ']'
   74    | express . TOK_ARROW TOK_IDENT

    TOK_GE     shift, and go to state 96
    TOK_LE     shift, and go to state 97
    TOK_EQ     shift, and go to state 98
    TOK_NE     shift, and go to state 99
    TOK_GT     shift, and go to state 100
    TOK_LT     shift, and go to state 101
    TOK_ARROW  shift, and go to state 102
    '='        shift, and go to state 103
    '+'        shift, and go to state 104
    '-'        shift, and go to state 105
    '*'        shift, and go to state 106
    '/'        shift, and go to state 107
    '%'        shift, and go to state 108
    '['        shift, and go to state 109
    ';'        shift, and go to state 120


State 89

   19 callParam: TOK_IDENT '(' . express
   21 call: TOK_IDENT '(' . ')'

    TOK_NULLPTR    shift, and go to state 40
    TOK_NOT        shift, and go to state 42
    TOK_ALLOC      shift, and go to state 43
    TOK_CHARCON    shift, and go to state 46
    TOK_STRINGCON  shift, and go to state 47
    TOK_INTCON     shift, and go to state 48
    TOK_IDENT      shift, and go to state 49
    '+'            shift, and go to state 50
    '-'            shift, and go to state 51
    '('            shift, and go to state 52
    ')'            shift, and go to state 121

    callParam  go to state 56
    call       go to state 57
    alloc      go to state 61
    express    go to state 122
    binop      go to state 67
    unop       go to state 68
    var        go to state 69
    constant   go to state 71


State 90
